--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://magenon.github.io/Sennda-Software",
+  "homepage": "github-page/",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
